add functionality to create a new note

--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,9 @@ td,th {
 .create-note{
     border: 1px solid black;
 }
+
+/* styles.css */
+.invalid {
+    border-color: red;
+    /* або інший стиль, який ви хочете застосувати */
+}
